Task5/src/kuberneties/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pro-development-client
---
apiVersion: v1
kind: Namespace
metadata:
  name: pro-development-tenant
---
apiVersion: v1
kind: Namespace
metadata:
  name: pro-development-smart-home
---
apiVersion: v1
kind: Namespace
metadata:
  name: pro-development-accountant  
---
apiVersion: v1
kind: Namespace
metadata:
  name: pro-development-ware-house
