Task5/src/kuberneties/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
  namespace: pro-development-smart-home
  labels:
    role: admin-back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-back-end-api
  template:
    metadata:
      labels:
        role: admin-back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
  namespace: pro-development-smart-home
spec:
  type: NodePort
  selector:
    role: admin-back-end-api
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
  namespace: pro-development-smart-home
  labels:
    role: admin-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-front-end
  template:
    metadata:
      labels:
        role: admin-front-end
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
  namespace: pro-development-smart-home
spec:
  type: NodePort
  selector:
    role: admin-front-end
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
