Task5/src/kuberneties/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api-app
  namespace: pro-development-smart-home
  labels:
    role: back-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      role: back-end-api
  template:
    metadata:
      labels:
        role: back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app
  namespace: pro-development-smart-home
spec:
  type: NodePort
  selector:
    role: back-end-api
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  namespace: pro-development-smart-home
  labels:
    role: front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      role: front-end
  template:
    metadata:
      labels:
        role: front-end
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  namespace: pro-development-smart-home
spec:
  type: NodePort
  selector:
    role: front-end
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31081
